@@ -1,6 +1,6 @@
 
-R version 3.5.1 (2018-07-02) -- "Feather Spray"
-Copyright (C) 2018 The R Foundation for Statistical Computing
+R version 3.6.1 (2019-07-05) -- "Action of the Toes"
+Copyright (C) 2019 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -118,9 +118,9 @@ In .checkR(y, weights) : response contains left-censored observations only
 > 
 > m2 <- ctm(as.basis(~ y, data = d, ui = matrix(c(0, 1), nr = 1), ci = 0), todistr = "Normal")
 > f2 <- mlt(m2, data = d, scale = TRUE)
-> stopifnot(all.equal(coef(f), coef(f2)[2:1]))
+> stopifnot(all.equal(coef(f), coef(f2)[2:1], check.attributes = FALSE))
 > stopifnot(all.equal(logLik(f), logLik(f2)))
-> stopifnot(all.equal(estfun(f), estfun(f2)[,2:1]))
+> stopifnot(all.equal(estfun(f), estfun(f2)[,2:1], check.attributes = FALSE))
 > 
 > ### new shortcut
 > x <- rnorm(100)
@@ -143,4 +143,4 @@ In .checkR(y, weights) : response contains left-censored observations only
 > 
 > proc.time()
    user  system elapsed 
-  3.104   0.116   3.227 
+  2.760   0.123   2.902 
