@@ -2,6 +2,12 @@
 \name{NEWS}
 \title{NEWS file for the mlt package}
 
+\section{Changes in Version 1.0-7 (2019-10-07)}{
+  \itemize{
+    \item{Less paranoia in \file{bugfixes.R}.}
+  }
+}
+
 \section{Changes in Version 1.0-6 (2019-10-04)}{
   \itemize{
     \item{Return Hessian for fixed parameters if requested.}
@@ -9,6 +15,7 @@
     \item{Allow to \code{update} offsets.}
   }
 }
+
 
 \section{Changes in Version 1.0-5 (2019-06-20)}{
   \itemize{
